--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
 
     /* FOOTER */
     .footer {
+    margin-top: -30px;
       font-size: 12px;
       text-align: center;
       color: #6b7280;
